--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,25 +1,23 @@
-# MySQL (default setup). Versions 4.1 and 5.0 are recommended.
-#
 development:
-  adapter: mysql2
-  database: mconf_development         # mysql database name
-  username: mconf                     # mysql database user
-  password: secret-pass               # mysql database password
-  socket: /var/run/mysqld/mysqld.sock
+  adapter:  <%= ENV['MCONF_DATABASE_DEV_ADAPTER'] || 'mysql2' %>
+  host:     <%= ENV['MCONF_DATABASE_DEV_HOST'] || '127.0.0.1' %>
+  database: <%= ENV['MCONF_DATABASE_DEV_NAME'] || 'mconf_web_ufrgs_dev' %>
+  username: <%= ENV['MCONF_DATABASE_DEV_USERNAME'] %>
+  password: <%= ENV['MCONF_DATABASE_DEV_PASSWORD'] %>
+  socket:   <%= ENV['MCONF_DATABASE_DEV_SOCKET'] || '/var/run/mysqld/mysqld.sock' %>
 
-# Warning: The database defined as 'test' will be erased and
-# re-generated from your development database when you run 'rake'.
-# Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  database: mconf_test                # mysql database name
-  username: mconf                     # mysql database user
-  password: secret-pass               # mysql database password
-  socket: /var/run/mysqld/mysqld.sock
+  adapter:  <%= ENV['MCONF_DATABASE_TEST_ADAPTER'] || 'mysql2' %>
+  host:     <%= ENV['MCONF_DATABASE_TEST_HOST'] || '127.0.0.1' %>
+  database: <%= ENV['MCONF_DATABASE_TEST_NAME'] || 'mconf_web_ufrgs_test' %>
+  username: <%= ENV['MCONF_DATABASE_TEST_USERNAME'] %>
+  password: <%= ENV['MCONF_DATABASE_TEST_PASSWORD'] %>
+  socket:   <%= ENV['MCONF_DATABASE_TEST_SOCKET'] || '/var/run/mysqld/mysqld.sock' %>
 
 production:
-  adapter: mysql2
-  database: mconf_production          # mysql database name
-  username: mconf                     # mysql database user
-  password: secret-pass               # mysql database password
-  socket: /var/run/mysqld/mysqld.sock
+  adapter:  <%= ENV['MCONF_DATABASE_PROD_ADAPTER'] || 'mysql2' %>
+  host:     <%= ENV['MCONF_DATABASE_PROD_HOST'] || '127.0.0.1' %>
+  database: <%= ENV['MCONF_DATABASE_PROD_NAME'] || 'mconf_web_ufrgs_production' %>
+  username: <%= ENV['MCONF_DATABASE_PROD_USERNAME'] %>
+  password: <%= ENV['MCONF_DATABASE_PROD_PASSWORD'] %>
+  socket:   <%= ENV['MCONF_DATABASE_PROD_SOCKET'] || '/var/run/mysqld/mysqld.sock' %>
