--- a/config/setup_conf.yml.example
+++ b/config/setup_conf.yml.example
@@ -11,11 +11,11 @@ default:
   #
 
   # Redis server. Defaults to 'localhost:6379' if you leave the block commented.
-  # redis:
-  #   host: 'localhost'
+  redis:
+    host: 'dev_redis'
   #   port: '6379'
   #   db: 1
-  #   password: '1234567890'
+    password: 'XYqZihWYGeAIOZo2VN2LcNJxC2R4UcQE'
 
   #
   # Configurations that are used only by db:seeds.
