docker-compose updated

--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,14 @@
+RAILS_ENV=development
+
 # Database configurations
 MCONF_DATABASE_DEV_ADAPTER='mysql2'
-MCONF_DATABASE_DEV='mconf_web_dev'
-MCONF_DATABASE_DEV_USERNAME='root'
-MCONF_DATABASE_DEV_PASSWORD=''
+MCONF_DATABASE_DEV_HOST=dev_db
+MCONF_DATABASE_DEV_NAME=mconf_web_dev
+MCONF_DATABASE_DEV_USERNAME=mconf
+MCONF_DATABASE_DEV_PASSWORD=mconf
 
 # Scope for all URLs related to conferences
-MCONF_CONFERENCE_SCOPE='nothing'
+# MCONF_CONFERENCE_SCOPE='conference'
 
 # Scope for the short URLs of web conference rooms
 MCONF_CONFERENCE_SCOPE_ROOMS='lol'
