Dev env closer to elos

--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,6 @@
 RAILS_ENV=development
 
 # Database configurations
-MCONF_DATABASE_DEV_ADAPTER='mysql2'
-MCONF_DATABASE_DEV_HOST=dev_db
-MCONF_DATABASE_DEV_NAME=mconf_web_dev
 MCONF_DATABASE_DEV_USERNAME=mconf
 MCONF_DATABASE_DEV_PASSWORD=mconf
 
@@ -11,4 +8,10 @@ MCONF_DATABASE_DEV_PASSWORD=mconf
 # MCONF_CONFERENCE_SCOPE='conference'
 
 # Scope for the short URLs of web conference rooms
-MCONF_CONFERENCE_SCOPE_ROOMS='lol'
+# MCONF_CONFERENCE_SCOPE_ROOMS='webconf'
+
+# Redis
+MCONF_REDIS_HOST=dev_redis
+MCONF_REDIS_PASSWORD=XYqZihWYGeAIOZo2VN2LcNJxC2R4UcQE
+# MCONF_REDIS_PORT='6379'
+# MCONF_REDIS_DB='0'
