--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ services:
 
   dev:
     container_name: mconf_web_ufrgs_dev
-    image: mconf_web_ufrgs_dev:dev
     build: .
+    image: mconf_web_ufrgs_dev:dev
     tty: true
+    stdin_open: true
     ports:
       - "3000:3000"
     depends_on:
@@ -18,7 +19,7 @@ services:
     volumes:
       - ./:/usr/src/app
       - bundle-volume:/usr/src/bundle
-    command: bash -c "rm -f tmp/pids/server.pid && rake db:create db:migrate && rails s -p3000"
+    command: bash -c "rm -f tmp/pids/server.pid && script/rails s -p3000"
   dev_db:
     container_name: mconf_web_ufrgs_dev_db
     image: mysql:5.6
@@ -57,7 +58,8 @@ services:
       - ./.env.development
     volumes:
       - ./:/usr/src/app
-    command: bash -c "mailcatcher --ip=0.0.0.0 -f"
+      - bundle-volume:/usr/src/bundle
+    command: bash -c "bundle exec mailcatcher --ip=0.0.0.0 -f"
 
   dev_resque_worker:
     container_name: mconf_web_ufrgs_dev_resque_worker
@@ -68,9 +70,12 @@ services:
     env_file:
       - ./.env
       - ./.env.development
+    environment:
+      - QUEUE=*
     volumes:
       - ./:/usr/src/app
-    command: bash -c "rake resque:work"
+      - bundle-volume:/usr/src/bundle
+    command: bash -c "bundle exec rake resque:work"
 
   dev_resque_scheduler:
     container_name: mconf_web_ufrgs_dev_resque_scheduler
@@ -83,13 +88,15 @@ services:
       - ./.env.development
     volumes:
       - ./:/usr/src/app
-    command: bash -c "rake resque:scheduler"
+      - bundle-volume:/usr/src/bundle
+    command: bash -c "bundle exec rake resque:scheduler"
 
 
   test:
     container_name: mconf_web_ufrgs_test
     build: .
     tty: true
+    stdin_open: true
     depends_on:
       - test_db
       - test_redis
@@ -99,7 +106,7 @@ services:
     volumes:
       - ./:/usr/src/app
       - bundle-volume:/usr/src/bundle
-    command: bash -c "rake"
+    command: bash -c "bundle exec rake"
   test_db:
     container_name: mconf_web_ufrgs_test_db
     image: mysql:5.6
