--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,9 @@
-MCONF_DATABASE_TEST_ADAPTER='mysql2'
-MCONF_DATABASE_TEST='mconf_web_test'
-MCONF_DATABASE_TEST_USERNAME='root'
-MCONF_DATABASE_TEST_PASSWORD=''
+RAILS_ENV=test
+
+MCONF_DATABASE_TEST_HOST=test_db
+MCONF_DATABASE_TEST_NAME=mconf_web_ufrgs_test
+MCONF_DATABASE_TEST_USERNAME=mconf
+MCONF_DATABASE_TEST_PASSWORD=mconf
+
+MCONF_REDIS_HOST=test_redis
+MCONF_REDIS_PASSWORD=XYqZihWYGeAIOZo2VN2LcNJxC2R4UcQE
