--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,8 @@
 RAILS_ENV=development
 
 # Database configurations
+MCONF_DATABASE_DEV_HOST=dev_db
+MCONF_DATABASE_DEV_NAME=mconf_web_dev
 MCONF_DATABASE_DEV_USERNAME=mconf
 MCONF_DATABASE_DEV_PASSWORD=mconf
 
